# RockeyHockey2026

./: .gitignore  Constants.py  DataModel.py  README.md  STATE.drawio  Simulator.py  Strategy.py  main.py  requirements.txt  start.py  state.txt  test.py
CAD/STL/: Pulley_36mm_608_GT2_6mm.STL  Pulley_42_Teeth_GT2_6mm.STL  Pulley_48_Teeth_GT2_6mm.STL  Spacer_4mm.STL  Spacer_6_5mm.STL  X_Carriage_Bushings.STL  Y_Carriage.STL  Y_Carriage_Motor_Mount.STL  Y_Carriage_Rail_Plate.STL  Y_Rail_Stopper.STL  Y_Rail_Stopper_with_Pulley.STL
CAD/Solidworks/: RH_Spacer_4mm.SLDPRT  (+27 more)
Camera/: Camera.py  Cargo.toml  Dockerfile  README.md  aarch64-cross.sh  flake.nix  measure_timing.sh
Camera/Raspberry/: camstream.py
Camera/scripts/: print_target_coordinates.py
Camera/src/: lib.rs  main.rs  virtual_coordinate_system.rs  web_ui.html
Camera/src/app/: input_modes.rs  mod.rs  runner.rs  target_output.rs
Camera/src/pi_camera/: mod.rs
Camera/src/puck_detector/: detector.rs  mod.rs  timed_detector.rs
Camera/src/puck_detector/settings/: crop_settings.rs  hsv_settings.rs  mod.rs  quality_settings.rs
Camera/src/web_ui/: embedded_static.rs  http.rs  mod.rs  render.rs  state.rs
Camera/src/web_ui_static/: app.js  index.html
Motor/: moveMotor.py
Processing/: Line.py  ProcessField.py  ProcessFrame.py
StepperController/: Constants.py  StepperController.ino  StepperController.py  Test.py  arduino_config.txt  calibration.h  defines.h  test.py
UIServer/: index.html  package-lock.json  package.json  server.js
UserInterface/: UserInterface.py
motionController/: motionController.ino
(+12 files in other folders)
